# amazfit2garmin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
samples/: garmin_reference_run.tcx  our_generated_run.tcx
src/amazfit2garmin/: __main__.py  activity.py  cli.py  converter.py  filename.py  mapper.py  parser.py  tcx_writer.py
tests/: conftest.py  test_cli.py  test_converter.py  test_filename.py  test_mapper.py  test_parser.py  test_tcx_writer.py  utils.py
tools/: compare_tcx.py
