[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amazfit2garmin"
version = "0.1.0"
description = "Convert Amazfit Zepp SPORT.csv exports into Garmin TCX files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Gerardo Saracino", email = "ge.saracino+amazfit2garmin@gmail.com" }
]

keywords = [
    "amazfit",
    "garmin",
    "zepp",
    "tcx",
    "fitness",
    "running",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]