[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amazfit2garmin"
version = "0.1.0"
description = "Convert Amazfit Zepp SPORT.csv exports into Garmin TCX files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Gerardo Saracino", email = "gersaremail-github@yahoo.it" }
]

keywords = [
    "amazfit",
    "garmin",
    "zepp",
    "tcx",
    "fitness",
    "running",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
amazfit2garmin = "amazfit2garmin.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = """
-v
--cov=amazfit2garmin
--cov-report=term-missing
"""

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.coverage.report]
omit = [
    "src/amazfit2garmin/__main__.py",
]